--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <div class="resume-wrap ftco-animate">
               <span class="date">2024</span>
               <h2>Marketing</h2>
-              <span class="position">Social media manager (Spices and Rice Restrurent for IPL 2024)</span>
+              <span class="position">Social media manager (Spices and Rice Restaurant for IPL 2024)</span>
               <p class="mt-4">
                 
                 
@@ -510,7 +510,7 @@
                 <span class="icon-map-signs"></span>
               </div>
               <h3 class="mb-4">Address</h3>
-              <p>Bhubneswar,Preamlata Enclave</p>
+              <p>Bhubneswar,Premlata Enclave</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
