--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="container">
             <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
               <div class="one-third js-fullheight order-md-last img" style="display: flex; height: 200px; justify-content: space-around;" >
-                <img class="profile_photo" src="images/me.jpeg" alt="profile" style="scale: .7;position: relative; left: 100px; top: -100px;">
+                <img class="profile_photo" src="images/me.jpeg" alt="profile" style="scale: .5;position: relative; left: 200px; top: -100px;"> 
                 <div class="overlay"></div>
               </div>
               <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -229,7 +229,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="images/about-me.jpeg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="images/me.jpeg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <!-- Details next to profile image -->
