--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
         <div class="slider-item ">
           <div class="overlay"></div>
           <div class="container">
-            <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-              <div class="one-third js-fullheight order-md-last img" style="display: flex; height: 200px; justify-content: space-around;" >
-                <img class="profile_photo" src="images/me.jpeg" alt="profile" style="scale: .5;position: relative; left: 125px; top: -100px;"> 
+            <div class="row d-md-flex  slider-text align-items-center justify-content-center" >
+              <div >
+                <img class="profile_photo" src="images/me.jpeg" alt="profile" > 
                 <div class="overlay"></div>
               </div>
               <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -228,9 +228,7 @@
                 <div class="overlay">
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
-                      <div class="about-img">
-                        <img src="images/about-me.jpeg" class="img-fluid rounded b-shadow-a" alt="">
-                      </div>
+                        <img class="profile_photo1" src="./images/about-me.jpeg" alt="profile" > 
                     </div>
                     <!-- Details next to profile image -->
                     <div class="col-sm-6 col-md-7">
